Initial setup which works for eclecticiq

--- a/python/eclecticiq/jupyter/docker-compose.yaml
+++ b/python/eclecticiq/jupyter/docker-compose.yaml
@@ -19,5 +19,12 @@ services:
     working_dir: /workdir
     volumes:
       - .:/workdir
+      - ../src:/eclecticiq
     ports:
       - 8888:8888
+    networks:
+      - eclecticiq-net
+
+networks:
+  eclecticiq-net:
+    external: true
